# launch-json

./: CHANGELOG.md  README.md  launch-json.cabal
.devcontainer/: devcontainer.json
.github/workflows/: haskell-ci.yml
lib/launch-configuration/: LaunchConfiguration.hs
lib/launch-json/: LaunchJson.hs
lib/launch-json/Launch/: Json.hs
lib/launch-json/LaunchJson/: Defaults.hs  Environment.hs  Options.hs
test/launch-configuration/: LaunchConfigurationGolden.hs  Main.hs
test/launch-configuration/data/: launch-json.cabal  luanch-json.yaml
test/launch-json/: LaunchJsonSpec.hs  Main.hs
test/launch-json/LaunchJsonSpec/: OptionsSpec.hs
