cabal-version:      3.0
name:               launch-json
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          (c) 2024 Alex Brandt
author:             Alex Brandt
maintainer:         alunduil@gmail.com
stability:          alpha
homepage:           http://github.com/alunduil/launch-json
bug-reports:        http://github.com/alunduil/launch-json/issues
synopsis:
  launch-json creates a launch.json from a Haskell project for phoityne-vscode

description:
  launch-json creates a launch.json configuration fro Visual Studio Code for use
  with phoityne-vscode based on the existing Cabal file for your project.

category:           VSCode
tested-with:        GHC >=9.6 && <9.7 || >=9.8 && <9.9 || >=9.10 && <9.11
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files:
  .devcontainer/devcontainer.json
  .github/workflows/*.yml
  .vscode/*.json

data-files:

source-repository head
  type:     git
  location: http://github.com/alunduil/launch-json

common launch-json-common
  build-depends:
    base ^>=4.16.3.0 || ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20

  ghc-options:
    -Wall -Werror=missing-fields -Werror=unused-imports
    -Werror=unused-matches -Werror=unused-top-binds -Wunused-packages
    -Werror=unused-packages

library launch-json-library
  import:           launch-json-common
  exposed-modules:  Launch.Json
  other-modules:
  build-depends:
  hs-source-dirs:   lib/launch-json
  default-language: Haskell2010

test-suite launch-json-test
  import:           launch-json-common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:    tasty ^>=1.4.3 || ^>=1.5

  -- , launch-json-library
  other-modules:
  hs-source-dirs:   test/launch-json
  default-language: Haskell2010
  ghc-options:      -threaded

executable launch-json
  main-is:          Main.hs
  build-depends:
    base ^>=4.16.3.0 || ^>=4.17.0.0 || ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20

  -- , launch-json-library

  hs-source-dirs:   bin/launch-json
  default-language: Haskell2010
  ghc-options:
    -threaded -Wall -Wunused-packages -Werror=unused-packages
