cabal-version:      3.0
name:               launch-json
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          (c) 2024 Alex Brandt
author:             Alex Brandt
maintainer:         alunduil@gmail.com
stability:          alpha
homepage:           http://github.com/alunduil/launch-json
bug-reports:        http://github.com/alunduil/launch-json/issues
synopsis:
  launch-json creates a launch.json from a Haskell project for phoityne-vscode

description:
  launch-json creates a launch.json configuration for Visual Studio Code for use
  with phoityne-vscode based on the existing Cabal file for your project.

category:           VSCode
tested-with:        GHC >=9.6 && <9.7 || >=9.8 && <9.9 || >=9.10 && <9.11
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files:
  .devcontainer/devcontainer.json
  .github/workflows/*.yml
  .vscode/*.json

data-files:

source-repository head
  type:     git
  location: http://github.com/alunduil/launch-json

common launch-json-common
  build-depends:
    , base                  ^>=4.16.3.0  || ^>=4.17    || ^>=4.18 || ^>=4.19 || ^>=4.20
    , filepath              ^>=1.4.100.1 || ^>=1.5.3.0
    , optparse-applicative  ^>=0.18.1.0

  ghc-options:
    -Wall -Werror=missing-fields -Werror=unused-imports
    -Werror=unused-matches -Werror=unused-top-binds -Wunused-packages
    -Werror=unused-packages

library launch-json-library
  import:           launch-json-common
  exposed-modules:
    LaunchJson
    LaunchJson.Defaults
    LaunchJson.Environment
    LaunchJson.Options

  other-modules:
  build-depends:
    , exceptions    ^>=0.10.7
    , Glob          ^>=0.10.2
    , monad-logger  ^>=0.3.40
    , mtl           ^>=2.3.1
    , process       ^>=1.6.17.0

  hs-source-dirs:   lib/launch-json
  default-language: Haskell2010

test-suite launch-json-test
  import:           launch-json-common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , hspec                ^>=2.11.9
    , launch-json-library
    , tasty                ^>=1.4.3   || ^>=1.5
    , tasty-hspec          ^>=1.2.0.4
    , text                 ^>=2.0.2   || ^>=2.1

  other-modules:
    LaunchJsonSpec
    LaunchJsonSpec.OptionsSpec

  hs-source-dirs:   test/launch-json
  default-language: Haskell2010
  ghc-options:      -threaded

executable launch-json
  main-is:          Main.hs
  build-depends:
    , base                 ^>=4.16.3.0 || ^>=4.17.0.0 || ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20
    , launch-json-library

  hs-source-dirs:   bin/launch-json
  default-language: Haskell2010
  ghc-options:
    -threaded -Wall -Wunused-packages -Werror=unused-packages
